# mindforge

./: .env.example  .gitignore  00-architecture.md  01-accounts-setup.md  02-airtable-schema.md  02b-airtable-phase-e-extension.md  03-airtable-script.md  04-make-scenario.md  04a-landing-page-html.md  05-powerbi-dashboard.md  06-airtable-interfaces.md  07-streamlit-admin.md  08-gcp-deployment.md  09-monitoring.md  10-meta-capi-tracking.md  LOVELIFEPASSPORT-ANALYSE.md  PHASE-E-MASTERPLAN.md  PHASE-E-PLAN.md  README.md
streamlit-app/: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  sidebar.py  sidebar_helpers.py
streamlit-app/.streamlit/: config.toml  secrets.toml.example
streamlit-app/components/: __init__.py  cs_kpi_row.py  funnel_chart.py  health_distribution.py  kpi_row.py  lead_card.py  mentor_capacity_chart.py  mentor_kpi_row.py  mrr_chart.py  onboarding_funnel.py  source_chart.py  specialization_chart.py
streamlit-app/integrations/: __init__.py  aircall.py  airtable_helpers.py  auth.py  google_calendar.py
streamlit-app/lib/: __init__.py  auth_security.py  filters.py  health.py  kpis.py  permissions.py  tz.py
streamlit-app/pages/: 1_Dashboard.py  2_Leads.py  3_Setter_Daily.py  4_Programme.py  5_Mentoren.py  6_Customer_Success.py  7_Benutzer.py  admin_performance.py  admin_pipeline.py  cs_analytics.py  mentor_analytics.py  mentor_aufgaben.py  mentor_cockpit.py  mentor_engagements.py  mentor_mentees.py  mentor_profil.py  mentor_sessions.py  sales_cockpit.py  sales_conversions.py  sales_meine_leads.py  sales_strategiegespraeche.py
(+61 files in other folders)
