[project]
name = "mindforge-coach-admin"
version = "0.1.0"
description = "MindForge Coach Admin — internes Streamlit-Dashboard für Lead-Management"
requires-python = ">=3.12"
dependencies = [
    # Phase 1 + C (Streamlit-App Basis)
    "streamlit==1.40.0",
    "pyairtable==2.3.3",
    "pandas==2.2.3",
    "plotly==5.24.1",

    # Phase E2 (Setter-Daily mit Google Calendar via User-OAuth)
    "google-auth==2.36.0",
    "google-auth-oauthlib==1.2.1",
    "google-api-python-client==2.151.0",
]

[tool.uv]
# Application, kein installierbares Paket — kein build-system nötig
package = false
